--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   url_launcher: ^6.1.12
   hive_flutter: ^1.1.0
   hive: ^2.2.3
+  internet_connection_checker: ^1.0.0+1
+
+
 
 dev_dependencies:
   flutter_test:
